finish the add and delete stock function

--- a/stocktry/public/tabletry.html
+++ b/stocktry/public/tabletry.html
@@ -36,6 +36,7 @@
   <div><input class="blueFont" id="stockNumber" type="text" value="002000"/></div>
   <div><button class="blueFont" id="addStockButton" type="button" onclick="addStock()">增加</button></div>
   <div><button class="blueFont" id="removeStockButton" type="button" onclick="removeStock()">删除</button></div>
+  <div><button class="blueFont" id="removeStockButton" type="button" onclick="initTable()">刷新</button></div>
   </form>
 </div>
 
